k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-ingress
  namespace: taskmanager
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "taskmanager-ip"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: taskmanager-svc
      port:
        number: 80
